# WebP_To_GIF

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-portable.ps1  build-tauri.mjs  check-fixed-layout.mjs  fix-macos-bundle.mjs  portable_launcher.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  history.rs  lib.rs  main.rs  output.rs  settings.rs
src-tauri/tests/: converter.rs  output_rules.rs  settings.rs
